# keypressed

./: .gitignore  .pre-commit-config.yaml  .pyproject  LICENSE  README.md  main.py  mypy.ini  pyment.conf  pyproject.toml  requirements.txt  update_version.py
keypressed/: __init__.py  __main__.py  elide_label.py  key_sequence.py  key_syms.py  keypressed.py  listener.py  utils.py
