[tool.poetry]
name = "keypressed"
version = "0.2.2"
description = "Detect which key you pressed and show it on screen."
authors = ["Pagliacii <huangmianrui0310@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
pyside6 = "^6.1.2"
pynput = "^1.7.3"
loguru = "^0.5.3"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.800"
pre-commit = "^2.10.1"
pylint = "^2.7.2"
commitizen = "^2.15.3"
pyment = "^0.3.3"
ipdb = "^0.13.7"
nuitka = "^0.6.16"
taskipy = "^1.8.1"
imageio = "^2.9.0"
zstandard = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple"
default = true

[tool.black]
line-length = 80
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
include_trailing_comma = true
line_length = 80
multi_line_output = 3

[tool.taskipy.tasks]
windows-build = '''
python -m nuitka \
    --onefile \
    --python-flag=-S \
    --windows-disable-console \
    --windows-force-stdout-spec=%PROGRAM%.log \
    --windows-force-stderr-spec=%PROGRAM%-err.log \
    --plugin-enable=pyside6 \
    --plugin-enable=pylint-warnings \
    --include-data-file=./assets/imgs/logo.png=assets/imgs/logo.png \
    --windows-icon-from-ico=./assets/imgs/logo.png \
    -o keypressed.exe \
    main.py'''
